--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,17 +4,19 @@ services:
     build:
       context: ./
       dockerfile: Dockerfile
+      args:
+        - "UID=${UID}"
+        - "GID=${GID}"
     ports:
       - '80:8000'
-    environment:
-      - USER_ID=`id -u`
   server-dev:
     build:
       context: ./
       dockerfile: Dockerfile.dev
+      args:
+        - "UID=${UID}"
+        - "GID=${GID}"
     ports:
       - '5000:8000'
-    environment:
-      - USER_ID=`id -u`
-    volumes: 
-      - ./:/app
+    volumes:
+      - ./src:/app
