--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
     ports:
       - '80:8000'
     command: [ "sanic", "server.app", "--host=0.0.0.0", "--fast" ]
+    env_file: .env
   sanic-dev:
     build:
       context: ./
@@ -23,3 +24,4 @@ services:
     command: [ "sanic", "server.app", "--host=0.0.0.0", "--dev" ]
     volumes:
       - ./src:/app
+    env_file: .env
