--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,8 +9,9 @@ services:
         - "MODE=PROD"
     ports:
       - '80:8000'
-    command: [ "sanic", "server.app", "--host=0.0.0.0", "--fast" ]
     env_file: .env
+    command: [ "sanic", "server.app", "--host=0.0.0.0", "--fast" ]
+    restart: unless-stopped
   sanic-dev:
     build:
       context: ./
